[project]
name = "loadforecasting_framework"
version = "0.1.6"
description = "Package, containing multiple state-of-the-art forecasting models."
authors = [{ name="Lukas Moosbrugger", email="molu@fhv.at" }]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "pandas",
    "holidays",
    "demandlib",
    "torch",
    "scipy",
    "seaborn",
    "matplotlib",
    "pytz",
    "plotly",
    "meteostat",
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/erc-fhv/loadforecasting"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["loadforecasting_framework"]
